--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ACC Driver Classifier</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+  <div class="absolute top-4 left-0 right-0 flex justify-center">
+    <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="h-16">
+  </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
     <form id="classificationForm" class="space-y-4">
