--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="absolute top-4 left-0 right-0 flex justify-center">
-    <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="h-16">
+    <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="w-[400px] h-[400px] object-contain">
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
@@ -49,29 +49,29 @@
 
   <script>
     const classificationData = {
-      "Monza": { "GT3": ["1:52.0", "1:50.5", "1:48.9", "1:47.9", "1:46.6"], "GT4": ["1:57.8", "1:52.0", "1:50.5", "1:48.9", "1:47.1"] },
-      "Mount Panorama": { "GT3": ["2:08.0", "2:06.2", "2:04.5", "2:02.8", "2:00.3"], "GT4": ["2:14.2", "2:08.0", "2:06.2", "2:04.5", "2:01.5"] },
-      "Paul Ricard": { "GT3": ["2:02.5", "2:01.2", "1:59.9", "1:58.1", "1:56.0"], "GT4": ["2:05.7", "2:02.5", "2:01.2", "1:59.9", "1:57.3"] },
-      "Silverstone": { "GT3": ["2:02.3", "2:01.5", "1:59.5", "1:58.1", "1:56.0"], "GT4": ["2:09.8", "2:02.3", "2:01.5", "1:59.5", "1:58.1"] },
-      "Spa Francorchamps": { "GT3": ["2:23.6", "2:21.0", "2:18.9", "2:16.5", "2:15.6"], "GT4": ["2:13.1", "2:23.6", "2:21.0", "2:18.9", "2:16.2"] },
-      "Watkins Glen": { "GT3": ["1:49.1", "1:47.2", "1:45.9", "1:44.2", "1:42.8"], "GT4": ["1:54.0", "1:49.1", "1:47.2", "1:45.9", "1:44.2"] },
-      "Barcelona": { "GT3": ["1:48.5", "1:47.0", "1:45.5", "1:44.0", "1:42.2"], "GT4": ["1:55.4", "1:48.5", "1:47.0", "1:45.5", "1:43.6"] },
-      "Brands Hatch": { "GT3": ["1:27.0", "1:25.4", "1:23.9", "1:23.2", "1:21.5"], "GT4": ["1:32.1", "1:27.0", "1:25.4", "1:23.9", "1:23.1"] },
-      "COTA": { "GT3": ["2:11.2", "2:09.3", "2:07.3", "2:05.5", "2:03.3"], "GT4": ["2:16.5", "2:11.2", "2:09.3", "2:07.3", "2:05.5"] },
-      "Donnington Park": { "GT3": ["1:31.0", "1:30.5", "1:28.5", "1:27.3", "1:25.0"], "GT4": ["1:35.4", "1:31.0", "1:30.5", "1:28.5", "1:26.3"] },
-      "Imola": { "GT3": ["1:46.0", "1:44.0", "1:42.6", "1:41.0", "1:39.4"], "GT4": ["1:49.5", "1:46.0", "1:44.0", "1:42.6", "1:40.3"] },
-      "Kyalami": { "GT3": ["1:46.0", "1:45.4", "1:43.2", "1:41.5", "1:39.9"], "GT4": ["1:54.3", "1:46.0", "1:45.4", "1:43.2", "1:42.0"] },
-      "Misano": { "GT3": ["1:37.5", "1:35.9", "1:34.5", "1:33.5", "1:32.1"], "GT4": ["1:48.1", "1:37.5", "1:35.9", "1:34.5", "1:31.9"] },
-      "Nurburgring GP": { "GT3": ["1:57.9", "1:56.0", "1:54.3", "1:53.0", "1:51.8"], "GT4": ["2:05.0", "1:57.9", "1:56.0", "1:54.3", "1:55.6"] },
-      "Suzuka": { "GT3": ["2:04.5", "2:03.5", "2:02.2", "2:00.9", "1:58.7"], "GT4": ["2:10.5", "2:04.5", "2:03.5", "2:02.2", "2:02.1"] },
-      "Oulton Park": { "GT3": ["1:39.1", "1:37.3", "1:35.2", "1:33.8", "1:32.3"], "GT4": ["1:43.0", "1:39.1", "1:37.3", "1:35.2", "1:33.8"] },
-      "Snetterton": { "GT3": ["1:52.2", "1:50.6", "1:48.9", "1:47.1", "1:44.8"], "GT4": ["1:57.9", "1:52.2", "1:50.6", "1:48.9", "1:47.1"] },
-      "Hungaroring": { "GT3": ["1:47.8", "1:48.0", "1:44.5", "1:42.9", "1:41.8"], "GT4": ["1:53.0", "1:47.8", "1:48.0", "1:44.5", "1:42.9"] },
-      "Indianapolis": { "GT3": ["1:39.5", "1:38.5", "1:36.1", "1:34.0", "1:33.5"], "GT4": ["1:43.4", "1:39.5", "1:38.5", "1:36.1", "1:34.0"] },
-      "Laguna Seca": { "GT3": ["1:26.5", "1:25.7", "1:24.5", "1:23.5", "1:20.9"], "GT4": ["1:30.9", "1:26.5", "1:25.7", "1:24.5", "1:23.5"] },
-      "Zandvoort": { "GT3": ["1:39.4", "1:38.5", "1:37.2", "1:35.2", "1:33.9"], "GT4": ["1:43.6", "1:39.4", "1:38.5", "1:37.2", "1:35.2"] },
-      "Zolder": { "GT3": ["1:32.0", "1:30.4", "1:29.0", "1:28.3", "1:26.8"], "GT4": ["1:36.5", "1:32.0", "1:30.4", "1:29.0", "1:28.3"] }
-    };
+  "Monza": { "GT3": ["1:52.0", "1:50.5", "1:48.9", "1:47.9", "1:46.6"], "GT4": ["1:57.8", "1:55.0", "1:52.0", "1:50.5", "1:48.9"] },
+  "Mount Panorama": { "GT3": ["2:08.0", "2:06.2", "2:04.5", "2:02.8", "2:00.3"], "GT4": ["2:14.2", "2:12.0", "2:10.0", "2:08.0", "2:06.2"] },
+  "Paul Ricard": { "GT3": ["2:02.5", "2:01.2", "1:59.9", "1:58.1", "1:56.0"], "GT4": ["2:05.7", "2:03.0", "2:01.2", "2:00.0", "1:57.3"] },
+  "Silverstone": { "GT3": ["2:02.3", "2:01.5", "1:59.5", "1:58.1", "1:56.0"], "GT4": ["2:09.8", "2:07.0", "2:05.0", "2:03.0", "2:01.5"] },
+  "Spa Francorchamps": { "GT3": ["2:23.6", "2:21.0", "2:18.9", "2:16.5", "2:15.6"], "GT4": ["2:13.1", "2:11.0", "2:09.0", "2:07.0", "2:05.5"] },
+  "Watkins Glen": { "GT3": ["1:49.1", "1:47.2", "1:45.9", "1:44.2", "1:42.8"], "GT4": ["1:54.0", "1:52.0", "1:50.0", "1:48.0", "1:46.0"] },
+  "Barcelona": { "GT3": ["1:48.5", "1:47.0", "1:45.5", "1:44.0", "1:42.2"], "GT4": ["1:55.4", "1:53.0", "1:51.0", "1:49.0", "1:47.0"] },
+  "Brands Hatch": { "GT3": ["1:27.0", "1:25.4", "1:23.9", "1:23.2", "1:21.5"], "GT4": ["1:32.1", "1:30.0", "1:28.5", "1:27.0", "1:25.0"] },
+  "COTA": { "GT3": ["2:11.2", "2:09.3", "2:07.3", "2:05.5", "2:03.3"], "GT4": ["2:16.5", "2:14.5", "2:12.5", "2:10.5", "2:08.5"] },
+  "Donnington Park": { "GT3": ["1:31.0", "1:30.5", "1:28.5", "1:27.3", "1:25.0"], "GT4": ["1:35.4", "1:33.5", "1:31.5", "1:30.0", "1:28.0"] },
+  "Imola": { "GT3": ["1:46.0", "1:44.0", "1:42.6", "1:41.0", "1:39.4"], "GT4": ["1:49.5", "1:47.0", "1:45.0", "1:43.0", "1:41.0"] },
+  "Kyalami": { "GT3": ["1:46.0", "1:45.4", "1:43.2", "1:41.5", "1:39.9"], "GT4": ["1:54.3", "1:52.0", "1:50.0", "1:48.0", "1:46.0"] },
+  "Misano": { "GT3": ["1:37.5", "1:35.9", "1:34.5", "1:33.5", "1:32.1"], "GT4": ["1:48.1", "1:46.0", "1:44.5", "1:43.0", "1:41.5"] },
+  "Nurburgring GP": { "GT3": ["1:57.9", "1:56.0", "1:54.3", "1:53.0", "1:51.8"], "GT4": ["2:05.0", "2:03.0", "2:01.0", "1:59.0", "1:57.0"] },
+  "Suzuka": { "GT3": ["2:04.5", "2:03.5", "2:02.2", "2:00.9", "1:58.7"], "GT4": ["2:10.5", "2:08.0", "2:06.0", "2:04.0", "2:02.0"] },
+  "Oulton Park": { "GT3": ["1:39.1", "1:37.3", "1:35.2", "1:33.8", "1:32.3"], "GT4": ["1:43.0", "1:41.0", "1:39.0", "1:37.0", "1:35.0"] },
+  "Snetterton": { "GT3": ["1:52.2", "1:50.6", "1:48.9", "1:47.1", "1:44.8"], "GT4": ["1:57.9", "1:56.0", "1:54.0", "1:52.0", "1:50.0"] },
+  "Hungaroring": { "GT3": ["1:47.8", "1:46.5", "1:44.5", "1:42.9", "1:41.8"], "GT4": ["1:53.0", "1:51.0", "1:49.0", "1:47.0", "1:45.0"] },
+  "Indianapolis": { "GT3": ["1:39.5", "1:38.5", "1:36.1", "1:34.0", "1:33.5"], "GT4": ["1:43.4", "1:41.5", "1:39.5", "1:37.5", "1:36.0"] },
+  "Laguna Seca": { "GT3": ["1:26.5", "1:25.7", "1:24.5", "1:23.5", "1:20.9"], "GT4": ["1:30.9", "1:29.0", "1:27.0", "1:25.0", "1:23.5"] },
+  "Zandvoort": { "GT3": ["1:39.4", "1:38.5", "1:37.2", "1:35.2", "1:33.9"], "GT4": ["1:43.6", "1:41.5", "1:39.5", "1:37.5", "1:35.2"] },
+  "Zolder": { "GT3": ["1:32.0", "1:30.4", "1:29.0", "1:28.3", "1:26.8"], "GT4": ["1:36.5", "1:34.0", "1:32.0", "1:30.0", "1:28.3"] }
+};
 
     function timeToSeconds(timeStr) {
       const [min, sec] = timeStr.split(":");
