--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="absolute top-4 left-0 right-0 flex justify-center">
-    <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="w-[400px] h-[400px] object-contain">
+    <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="w-40 h-40 object-contain">
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
