--- a/index.html
+++ b/index.html
@@ -6,73 +6,35 @@
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
-    <form id="classificationForm" class="space-y-4">
-      <input type="text" id="driverName" placeholder="Driver Name" class="w-full p-2 border rounded" required />
-      
-      <select id="track" class="w-full p-2 border rounded" required>
-        <option value="">Select Track</option>
-        <option>Monza</option>
-        <option>Mount Panorama</option>
-        <option>Paul Ricard</option>
-        <option>Silverstone</option>
-        <option>Spa Francorchamps</option>
-        <option>Watkins Glen</option>
-        <option>Barcelona</option>
-        <option>Brands Hatch</option>
-        <option>COTA</option>
-        <option>Donnington Park</option>
-        <option>Imola</option>
-        <option>Kyalami</option>
-        <option>Misano</option>
-        <option>Nurburgring GP</option>
-        <option>Suzuka</option>
-        <option>Oulton Park</option>
-        <option>Snetterton</option>
-        <option>Hungaroring</option>
-        <option>Indianapolis</option>
-        <option>Laguna Seca</option>
-        <option>Zandvoort</option>
-        <option>Zolder</option>
-      </select>
-
-      <select id="carClass" class="w-full p-2 border rounded" required>
-        <option value="">Select Car Class</option>
-        <option>GT3</option>
-        <option>GT4</option>
-      </select>
-
-      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.3)" class="w-full p-2 border rounded" required />
-
-      <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
-    </form>
+    
+      <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
 
     <div id="result" class="mt-4 text-lg font-semibold"></div>
   </div>
 
   <script>
     const classificationData = {
-  "Monza": { "GT3": ["1:52.0", "1:50.5", "1:48.9", "1:47.9", "1:46.6"], "GT4": ["1:57.8", "1:55.0", "1:52.0", "1:50.5", "1:48.9"] },
-  "Mount Panorama": { "GT3": ["2:08.0", "2:06.2", "2:04.5", "2:02.8", "2:00.3"], "GT4": ["2:14.2", "2:12.0", "2:10.0", "2:08.0", "2:06.2"] },
-  "Paul Ricard": { "GT3": ["2:02.5", "2:01.2", "1:59.9", "1:58.1", "1:56.0"], "GT4": ["2:05.7", "2:03.0", "2:01.2", "2:00.0", "1:57.3"] },
-  "Silverstone": { "GT3": ["2:02.3", "2:01.5", "1:59.5", "1:58.1", "1:56.0"], "GT4": ["2:09.8", "2:07.0", "2:05.0", "2:03.0", "2:01.5"] },
-  "Spa Francorchamps": { "GT3": ["2:23.6", "2:21.0", "2:18.9", "2:16.5", "2:15.6"], "GT4": ["2:13.1", "2:11.0", "2:09.0", "2:07.0", "2:05.5"] },
-  "Watkins Glen": { "GT3": ["1:49.1", "1:47.2", "1:45.9", "1:44.2", "1:42.8"], "GT4": ["1:54.0", "1:52.0", "1:50.0", "1:48.0", "1:46.0"] },
-  "Barcelona": { "GT3": ["1:48.5", "1:47.0", "1:45.5", "1:44.0", "1:42.2"], "GT4": ["1:55.4", "1:53.0", "1:51.0", "1:49.0", "1:47.0"] },
-  "Brands Hatch": { "GT3": ["1:27.0", "1:25.4", "1:23.9", "1:23.2", "1:21.5"], "GT4": ["1:32.1", "1:30.0", "1:28.5", "1:27.0", "1:25.0"] },
-  "COTA": { "GT3": ["2:11.2", "2:09.3", "2:07.3", "2:05.5", "2:03.3"], "GT4": ["2:16.5", "2:14.5", "2:12.5", "2:10.5", "2:08.5"] },
-  "Donnington Park": { "GT3": ["1:31.0", "1:30.5", "1:28.5", "1:27.3", "1:25.0"], "GT4": ["1:35.4", "1:33.5", "1:31.5", "1:30.0", "1:28.0"] },
-  "Imola": { "GT3": ["1:46.0", "1:44.0", "1:42.6", "1:41.0", "1:39.4"], "GT4": ["1:49.5", "1:47.0", "1:45.0", "1:43.0", "1:41.0"] },
-  "Kyalami": { "GT3": ["1:46.0", "1:45.4", "1:43.2", "1:41.5", "1:39.9"], "GT4": ["1:54.3", "1:52.0", "1:50.0", "1:48.0", "1:46.0"] },
-  "Misano": { "GT3": ["1:37.5", "1:35.9", "1:34.5", "1:33.5", "1:32.1"], "GT4": ["1:48.1", "1:46.0", "1:44.5", "1:43.0", "1:41.5"] },
-  "Nurburgring GP": { "GT3": ["1:57.9", "1:56.0", "1:54.3", "1:53.0", "1:51.8"], "GT4": ["2:05.0", "2:03.0", "2:01.0", "1:59.0", "1:57.0"] },
-  "Suzuka": { "GT3": ["2:04.5", "2:03.5", "2:02.2", "2:00.9", "1:58.7"], "GT4": ["2:10.5", "2:08.0", "2:06.0", "2:04.0", "2:02.0"] },
-  "Oulton Park": { "GT3": ["1:39.1", "1:37.3", "1:35.2", "1:33.8", "1:32.3"], "GT4": ["1:43.0", "1:41.0", "1:39.0", "1:37.0", "1:35.0"] },
-  "Snetterton": { "GT3": ["1:52.2", "1:50.6", "1:48.9", "1:47.1", "1:44.8"], "GT4": ["1:57.9", "1:56.0", "1:54.0", "1:52.0", "1:50.0"] },
-  "Hungaroring": { "GT3": ["1:47.8", "1:46.5", "1:44.5", "1:42.9", "1:41.8"], "GT4": ["1:53.0", "1:51.0", "1:49.0", "1:47.0", "1:45.0"] },
-  "Indianapolis": { "GT3": ["1:39.5", "1:38.5", "1:36.1", "1:34.0", "1:33.5"], "GT4": ["1:43.4", "1:41.5", "1:39.5", "1:37.5", "1:36.0"] },
-  "Laguna Seca": { "GT3": ["1:26.5", "1:25.7", "1:24.5", "1:23.5", "1:20.9"], "GT4": ["1:30.9", "1:29.0", "1:27.0", "1:25.0", "1:23.5"] },
-  "Zandvoort": { "GT3": ["1:39.4", "1:38.5", "1:37.2", "1:35.2", "1:33.9"], "GT4": ["1:43.6", "1:41.5", "1:39.5", "1:37.5", "1:35.2"] },
-  "Zolder": { "GT3": ["1:32.0", "1:30.4", "1:29.0", "1:28.3", "1:26.8"], "GT4": ["1:36.5", "1:34.0", "1:32.0", "1:30.0", "1:28.3"] }
+  "Monza": { "GT3": ["1:51.7", "1:49.7", "1:47.7", "1:45.7", "1:45.7"] },
+  "Spa Francorchamps": { "GT3": ["2:21.0", "2:19.0", "2:17.0", "2:15.0", "2:15.0"] },
+  "Silverstone": { "GT3": ["2:02.437", "2:00.437", "1:58.437", "1:56.437", "1:56.437"] },
+  "Nurburgring GP": { "GT3": ["1:58.1", "1:56.1", "1:54.1", "1:52.1", "1:52.1"] },
+  "Barcelona": { "GT3": ["1:47.6", "1:45.6", "1:43.6", "1:41.6", "1:41.6"] },
+  "Zandvoort": { "GT3": ["1:39.5", "1:37.5", "1:35.5", "1:33.5", "1:33.5"] },
+  "Suzuka": { "GT3": ["2:04.270", "2:02.270", "2:00.270", "1:58.270", "1:58.270"] },
+  "Paul Ricard": { "GT3": ["1:57.9", "1:55.9", "1:53.9", "1:51.9", "1:51.9"] },
+  "Imola": { "GT3": ["1:44.972", "1:42.972", "1:40.972", "1:38.972", "1:38.972"] },
+  "Mount Panorama": { "GT3": ["2:05.847", "2:03.847", "2:01.847", "1:59.847", "1:59.847"] },
+  "Misano": { "GT3": ["1:37.592", "1:35.592", "1:33.592", "1:31.592", "1:31.592"] },
+  "Kyalami": { "GT3": ["1:45.720", "1:43.720", "1:41.720", "1:39.720", "1:39.720"] },
+  "Brands Hatch": { "GT3": ["1:27.300", "1:25.300", "1:23.300", "1:21.300", "1:21.300"] },
+  "Donnington Park": { "GT3": ["1:30.991", "1:28.991", "1:26.991", "1:24.991", "1:24.991"] },
+  "Valencia": { "GT3": ["1:34.475", "1:32.475", "1:30.475", "1:28.475", "1:28.475"] },
+  "Laguna Seca": { "GT3": ["1:26.427", "1:24.427", "1:22.427", "1:20.427", "1:20.427"] },
+  "Watkins Glen": { "GT3": ["1:48.510", "1:46.510", "1:44.510", "1:42.510", "1:42.510"] },
+  "Zolder": { "GT3": ["1:31.307", "1:29.307", "1:27.307", "1:25.307", "1:25.307"] },
+  "Red Bull Ring": { "GT3": ["1:31.000", "1:29.000", "1:27.000", "1:25.000", "1:25.000"] },
+  "Hungaroring": { "GT3": ["1:46.105", "1:44.105", "1:42.105", "1:40.105", "1:40.105"] },
+  "Nurburgring Nordchleiffe": { "GT3": ["8:22.347", "8:20.347", "8:18.347", "8:16.347", "8:16.347"] }
 };
 
     function timeToSeconds(timeStr) {
@@ -84,7 +46,7 @@
       if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
       const userTime = timeToSeconds(lapTime);
-      const classes = ["Rookie", "AM", "Silver", "Pro", "Alien"];
+      const classes = ["Rookie - IFWL.NET Beginner series is ideal for you ", "AM - IFWL.NET Pro - am series is ideal for you", " high end - AM - IFWL.NET Pro - am series is ideal for you", "Pro - IFWL.NET Pro am may suit your race pace", "Alien - consider getting a real race car ! :) "];
 
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[i];
