--- a/index.html
+++ b/index.html
@@ -6,8 +6,45 @@
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-4">ACC Driver Classification</h1>
-    
-      <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
+    <form id="classificationForm" class="space-y-4">
+      <input type="text" id="driverName" placeholder="Driver Name" class="w-full p-2 border rounded" required />
+
+      <select id="track" class="w-full p-2 border rounded" required>
+        <option value="">Select Track</option>
+        <option>Monza</option>
+        <option>Spa Francorchamps</option>
+        <option>Silverstone</option>
+        <option>Nurburgring GP</option>
+        <option>Barcelona</option>
+        <option>Zandvoort</option>
+        <option>Suzuka</option>
+        <option>Paul Ricard</option>
+        <option>Imola</option>
+        <option>Mount Panorama</option>
+        <option>Misano</option>
+        <option>Kyalami</option>
+        <option>Brands Hatch</option>
+        <option>Donnington Park</option>
+        <option>Valencia</option>
+        <option>Laguna Seca</option>
+        <option>Watkins Glen</option>
+        <option>Zolder</option>
+        <option>Red Bull Ring</option>
+        <option>Hungaroring</option>
+        <option>Nurburgring Nordchleiffe</option>
+      </select>
+
+      <select id="carClass" class="w-full p-2 border rounded" required>
+        <option value="">Select Car Class</option>
+        <option>GT3</option>
+      </select>
+
+      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.3)" class="w-full p-2 border rounded" required />
+
+      <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
+    </form>
+
+    <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
 
     <div id="result" class="mt-4 text-lg font-semibold"></div>
   </div>
@@ -46,7 +83,13 @@
       if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
       const userTime = timeToSeconds(lapTime);
-      const classes = ["Rookie - IFWL.NET Beginner series is ideal for you ", "AM - IFWL.NET Pro - am series is ideal for you", " high end - AM - IFWL.NET Pro - am series is ideal for you", "Pro - IFWL.NET Pro am may suit your race pace", "Alien - consider getting a real race car ! :) "];
+      const classes = [
+  "Rookie - IFWL.NET Beginner series is ideal for you ",
+  "AM - IFWL.NET Pro - am series is ideal for you",
+  " high end - AM - IFWL.NET Pro - am series is ideal for you",
+  "Pro - IFWL.NET Pro am may suit your race pace",
+  "Alien - consider getting a real race car ! :) "
+];
 
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[i];
