--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
         <option>Nurburgring Nordchleiffe</option>
       </select>
 
-      <select id="carClass" class="w-full p-2 border rounded" required>
-        <option value="">Select Car Class</option>
-        <option>GT3</option>
+      
+
+      <label for="weather" class="block text-left text-sm font-medium text-gray-700">Weather</label>
+      <select id="weather" class="w-full p-2 border rounded" required onchange="document.getElementById('weatherNote').style.display = this.value === 'wet' ? 'block' : 'none';">
+        <option value="dry">Dry</option>
+        <option value="wet">Wet</option>
       </select>
 
       <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.3)" class="w-full p-2 border rounded" required />
+
+      <p id="weatherNote" class="text-sm text-blue-600 mt-1 hidden">Note: Wet weather adds a 5% buffer to your lap time for fairer classification.</p>
 
       <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Classify Me</button>
     </form>
@@ -51,27 +56,27 @@
 
   <script>
     const classificationData = {
-  "Monza": { "GT3": ["1:51.7", "1:49.7", "1:47.7", "1:45.7", "1:45.7"] },
-  "Spa Francorchamps": { "GT3": ["2:21.0", "2:19.0", "2:17.0", "2:15.0", "2:15.0"] },
-  "Silverstone": { "GT3": ["2:02.437", "2:00.437", "1:58.437", "1:56.437", "1:56.437"] },
-  "Nurburgring GP": { "GT3": ["1:58.1", "1:56.1", "1:54.1", "1:52.1", "1:52.1"] },
-  "Barcelona": { "GT3": ["1:47.6", "1:45.6", "1:43.6", "1:41.6", "1:41.6"] },
-  "Zandvoort": { "GT3": ["1:39.5", "1:37.5", "1:35.5", "1:33.5", "1:33.5"] },
-  "Suzuka": { "GT3": ["2:04.270", "2:02.270", "2:00.270", "1:58.270", "1:58.270"] },
-  "Paul Ricard": { "GT3": ["1:57.9", "1:55.9", "1:53.9", "1:51.9", "1:51.9"] },
-  "Imola": { "GT3": ["1:44.972", "1:42.972", "1:40.972", "1:38.972", "1:38.972"] },
-  "Mount Panorama": { "GT3": ["2:05.847", "2:03.847", "2:01.847", "1:59.847", "1:59.847"] },
-  "Misano": { "GT3": ["1:37.592", "1:35.592", "1:33.592", "1:31.592", "1:31.592"] },
-  "Kyalami": { "GT3": ["1:45.720", "1:43.720", "1:41.720", "1:39.720", "1:39.720"] },
-  "Brands Hatch": { "GT3": ["1:27.300", "1:25.300", "1:23.300", "1:21.300", "1:21.300"] },
-  "Donnington Park": { "GT3": ["1:30.991", "1:28.991", "1:26.991", "1:24.991", "1:24.991"] },
-  "Valencia": { "GT3": ["1:34.475", "1:32.475", "1:30.475", "1:28.475", "1:28.475"] },
-  "Laguna Seca": { "GT3": ["1:26.427", "1:24.427", "1:22.427", "1:20.427", "1:20.427"] },
-  "Watkins Glen": { "GT3": ["1:48.510", "1:46.510", "1:44.510", "1:42.510", "1:42.510"] },
-  "Zolder": { "GT3": ["1:31.307", "1:29.307", "1:27.307", "1:25.307", "1:25.307"] },
-  "Red Bull Ring": { "GT3": ["1:31.000", "1:29.000", "1:27.000", "1:25.000", "1:25.000"] },
-  "Hungaroring": { "GT3": ["1:46.105", "1:44.105", "1:42.105", "1:40.105", "1:40.105"] },
-  "Nurburgring Nordchleiffe": { "GT3": ["8:22.347", "8:20.347", "8:18.347", "8:16.347", "8:16.347"] }
+  "Monza": { "GT3": ["1:45.7", "1:47.7", "1:49.7", "1:51.7", "1:53.7"] },
+  "Spa Francorchamps": { "GT3": ["2:15.0", "2:17.0", "2:19.0", "2:21.0", "2:23.0"] },
+  "Silverstone": { "GT3": ["1:56.437", "1:58.437", "2:00.437", "2:02.437", "2:04.437"] },
+  "Nurburgring GP": { "GT3": ["1:52.1", "1:54.1", "1:56.1", "1:58.1", "2:00.1"] },
+  "Barcelona": { "GT3": ["1:41.6", "1:43.6", "1:45.6", "1:47.6", "1:49.6"] },
+  "Zandvoort": { "GT3": ["1:33.5", "1:35.5", "1:37.5", "1:39.5", "1:41.5"] },
+  "Suzuka": { "GT3": ["1:58.270", "2:00.270", "2:02.270", "2:04.270", "2:06.270"] },
+  "Paul Ricard": { "GT3": ["1:51.9", "1:53.9", "1:55.9", "1:57.9", "1:59.9"] },
+  "Imola": { "GT3": ["1:38.972", "1:40.972", "1:42.972", "1:44.972", "1:46.972"] },
+  "Mount Panorama": { "GT3": ["1:59.847", "2:01.847", "2:03.847", "2:05.847", "2:07.847"] },
+  "Misano": { "GT3": ["1:31.592", "1:33.592", "1:35.592", "1:37.592", "1:39.592"] },
+  "Kyalami": { "GT3": ["1:39.720", "1:41.720", "1:43.720", "1:45.720", "1:47.720"] },
+  "Brands Hatch": { "GT3": ["1:21.300", "1:23.300", "1:25.300", "1:27.300", "1:29.300"] },
+  "Donnington Park": { "GT3": ["1:24.991", "1:26.991", "1:28.991", "1:30.991", "1:32.991"] },
+  "Valencia": { "GT3": ["1:28.475", "1:30.475", "1:32.475", "1:34.475", "1:36.475"] },
+  "Laguna Seca": { "GT3": ["1:20.427", "1:22.427", "1:24.427", "1:26.427", "1:28.427"] },
+  "Watkins Glen": { "GT3": ["1:42.510", "1:44.510", "1:46.510", "1:48.510", "1:50.510"] },
+  "Zolder": { "GT3": ["1:25.307", "1:27.307", "1:29.307", "1:31.307", "1:33.307"] },
+  "Red Bull Ring": { "GT3": ["1:25.000", "1:27.000", "1:29.000", "1:31.000", "1:33.000"] },
+  "Hungaroring": { "GT3": ["1:40.105", "1:42.105", "1:44.105", "1:46.105", "1:48.105"] },
+  "Nurburgring Nordchleiffe": { "GT3": ["8:16.347", "8:18.347", "8:20.347", "8:22.347", "8:24.347"] }
 };
 
     function timeToSeconds(timeStr) {
@@ -80,9 +85,11 @@
     }
 
     function classify(track, carClass, lapTime) {
+      const weather = document.getElementById("weather").value;
+      const rainImpact = weather === "wet" ? 1.05 : 1; // 5% slower if raining
       if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
-      const userTime = timeToSeconds(lapTime);
+      const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
   "Rookie - IFWL.NET Beginner series is ideal for you ",
   "AM - IFWL.NET Pro - am series is ideal for you",
