--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
       
 
+      
+      <select id="carClass" class="w-full p-2 border rounded" required>
+  <option value="">Select Car Class</option>
+  <option value="GT3">GT3</option>
+  <option value="GT4">GT4</option>
+</select>
+
       <label for="weather" class="block text-left text-sm font-medium text-gray-700">Weather</label>
       <select id="weather" class="w-full p-2 border rounded" required onchange="document.getElementById('weatherNote').style.display = this.value === 'wet' ? 'block' : 'none';">
         <option value="dry">Dry</option>
