--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
     <p class="text-sm text-gray-600 mt-6">These times are tailored to IFWL.NET racing league – this league runs a LFM BOP. Times may vary for other leagues. Use this as a base.</p>
 
     <div id="result" class="mt-4 text-lg font-semibold"></div>
+
+    <div id="simgridPromo" class="mt-6 hidden">
+      <a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
+        <img src="https://www.simgrid.com/static/media/logo.4d6f20e6.svg" alt="Join IFWL on SimGrid" class="mx-auto h-16">
+        <p class="text-blue-600 mt-2">Join the IFWL.NET league by clicking this image</p>
+      </a>
+    </div>
   </div>
 
   <script>
@@ -112,6 +119,7 @@
     }
 
     document.getElementById("classificationForm").addEventListener("submit", function (e) {
+      document.getElementById("simgridPromo").classList.remove("hidden");
       e.preventDefault();
       const track = document.getElementById("track").value;
       const carClass = document.getElementById("carClass").value;
