--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div id="simgridPromo" class="mt-6 hidden">
       <a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
-        <img src="https://www.thesimgrid.com/assets/logo-simgrid-white.png" alt="Join IFWL on SimGrid" class="mx-auto h-16">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
         <p class="text-blue-600 mt-2">Join the IFWL.NET league by clicking this image</p>
       </a>
     </div>
