--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div id="result" class="mt-4 text-lg font-semibold"></div>
 
-    <div id="simgridPromo" class="mt-6 hidden">
+    <div id="simgridPromo" class="mt-6 hidden bg-gray-800 p-4 rounded-lg">
       <a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
         <p class="text-blue-600 mt-2">Join the IFWL.NET league by clicking this image</p>
@@ -69,6 +69,7 @@
   </div>
 
   <script>
+  document.getElementById("simgridPromo").classList.add("hidden");
     const classificationData = {
   "Monza": { "GT3": ["1:45.7", "1:47.7", "1:49.7", "1:51.7", "1:53.7"] },
   "Spa Francorchamps": { "GT3": ["2:15.0", "2:17.0", "2:19.0", "2:21.0", "2:23.0"] },
