--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <option value="wet">Wet</option>
       </select>
 
-      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.3)" class="w-full p-2 border rounded" required />
+      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.382)" class="w-full p-2 border rounded" required pattern="^[0-9]:[0-5][0-9]\.[0-9]{3}$" title="Please enter time in the format m:ss.sss (e.g. 1:47.382)" />
 
       <p id="weatherNote" class="text-sm text-blue-600 mt-1 hidden">Note: Wet weather adds a 5% buffer to your lap time for fairer classification.</p>
 
@@ -63,7 +63,7 @@
     <div id="simgridPromo" class="mt-6 hidden bg-gray-800 p-4 rounded-lg">
       <a href="https://www.thesimgrid.com/communities/ifwl" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
-        <p class="text-blue-600 mt-2">Join the IFWL.NET league by clicking this image</p>
+        
       </a>
     </div>
   </div>
