--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center text-center">
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
-      <img src="https://previews.dropbox.com/p/thumb/ACmxG7EHSAvuSw_jlIzv71K9AereL9eSEGhZDYxPDPDiFdcbpwd5LpxztEjYebwcfXmaw_60bNry2AaKbu1n2WKE3oZ5wZYxmNsNVURe-Q3GXEzTpFHJ9_ZLmQdbKg2l04cPmY3RbHOpbOqYtvujFwrrEMgQoc8zG_Luhv1llfcFynFaJWv6UGQ9a19gUpNbZPscAuTTtpdXRlq4h6Zd7qJHYAQbcWYa7FzVu31UityPaV1WaLd35YPPCmk-4hapw9fFKYNC-R_2RpA_8ltfYjLOP4sQnh7Y8miWhLJGXqCVov2kHuz3CXSxVSbShk99HuU/p.png" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
+      <img src=\"https://static-cdn.jtvnw.net/jtv_user_pictures/e6b2aea1-2d5b-4fd7-9ce3-677c2e15af99-profile_banner-480.png\" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
     </a>
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
