--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
-  "Rookie - IFWL.NET Beginner series is ideal for you ",
-  "AM - IFWL.NET Pro - am series is ideal for you",
-  " high end - AM - IFWL.NET Pro - am series is ideal for you",
-  "Pro - IFWL.NET Pro am may suit your race pace",
-  "Alien - consider getting a real race car ! :) "
+  "Rookie - IFWL.NET Beginner series is ideal for you - click the simgrid logo below to head to IFWL's simgrid community  ",
+  "AM - IFWL.NET Pro - am series is ideal for you - click the simgrid logo below to head to IFWL's simgrid community ",
+  " high end - AM - IFWL.NET Pro - am series is ideal for you - click the simgrid logo below to head to IFWL's simgrid community ",
+  "Pro - IFWL.NET Pro am may suit your race pace - click the simgrid logo below to head to IFWL's simgrid community ",
+  "Alien - consider getting a real race car ! :)  unless you are lying? :O"
 ];
 
       for (let i = 0; i < thresholds.length; i++) {
