--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body class="bg-gray-100 min-h-screen flex flex-col justify-center items-center text-center">
   <div class="mb-6">
     <a href="https://www.ifwl.net" target="_blank">
-      <img src=\"./ifwl_logo.png\" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
+      <img src="./ifwl_logo.png" alt="IFWL Logo" class="w-32 h-32 object-contain mx-auto">
     </a>
   </div>
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
