--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <option value="wet">Wet</option>
       </select>
 
-      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.382)" class="w-full p-2 border rounded" required pattern="^[0-9]:[0-5][0-9]\.[0-9]{3}$" title="Please enter time in the format m:ss.sss (e.g. 1:47.382)" />
+      <input type="text" id="lapTime" placeholder="Lap Time (e.g. 1:47.382)" class="w-full p-2 border rounded" required pattern="^[0-9]{1,2}:[0-5][0-9](\.[0-9]{1,3})?$" title="Please enter time in the format m:ss.sss (e.g. 1:47.382)" />
 
       <p id="weatherNote" class="text-sm text-blue-600 mt-1 hidden">Note: Wet weather adds a 5% buffer to your lap time for fairer classification.</p>
 
