--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[i];
       }
-      return "Alien";
+      return "error code : max verstappen - this time is outside out permitted times.";
     }
 
     document.getElementById("classificationForm").addEventListener("submit", function (e) {
