--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     function timeToSeconds(timeStr) {
       const [min, sec] = timeStr.split(":");
-      return parseInt(min) * 60 + parseFloat(sec);
+      return (parseInt(min) * 60) + parseFloat(sec);
     }
 
     function classify(track, carClass, lapTime) {
