--- a/index.html
+++ b/index.html
@@ -127,7 +127,19 @@
       const lapTime = document.getElementById("lapTime").value.trim();
 
       const result = classify(track, carClass, lapTime);
-      document.getElementById("result").textContent = `You're classified as: ${result}`;
+      const thresholds = classificationData[track][carClass].map(timeToSeconds);
+      const fastestAllowedTime = thresholds[0];
+      const weather = document.getElementById("weather").value;
+      const rainImpact = weather === "wet" ? 1.05 : 1;
+      const userTime = timeToSeconds(lapTime) / rainImpact;
+
+      if (userTime < fastestAllowedTime) {
+        document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
+        document.getElementById("result").classList.add("text-red-600");
+      } else {
+        document.getElementById("result").classList.remove("text-red-600");
+        document.getElementById("result").textContent = `You're classified as: ${result}`;
+      }
     });
   </script>
 </body>
