--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
       const rainImpact = weather === "wet" ? 1.05 : 1;
       const userTime = timeToSeconds(lapTime) / rainImpact;
 
-      if (userTime < fastestAllowedTime) {
+      const bufferTime = fastestAllowedTime * 0.95;
+      if (userTime < bufferTime) {
         document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
         document.getElementById("result").classList.add("text-red-600");
+      } else if (userTime < fastestAllowedTime) {
+        document.getElementById("result").textContent = `You're classified as: Alien - consider getting a real race car ! :)`;
+        document.getElementById("result").classList.remove("text-red-600");
       } else {
         document.getElementById("result").classList.remove("text-red-600");
         document.getElementById("result").textContent = `You're classified as: ${result}`;
