--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
       const bufferTime = fastestAllowedTime * 0.95;
       if (userTime < bufferTime) {
-        document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
+        document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. error code : max verstappen - this time is outside out permitted times..";
         document.getElementById("result").classList.add("text-red-600");
       } else if (userTime < fastestAllowedTime) {
         document.getElementById("result").textContent = `You're classified as: Alien - consider getting a real race car ! :)`;
