--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
     });
 
     function downloadCSV() {
-      const headers = "Driver Name,Track,Car Class,Lap Time,Weather,Result\n";
+  const password = prompt("Enter password to download submissions:");
+  if (password !== "adamlovesjackson") {
+    alert("Incorrect password. Access denied.");
+    return;
+  }
+
+  const headers = "Driver Name,Track,Car Class,Lap Time,Weather,Result\n";
       const rows = submissionLog.map(entry => `${entry.name},${entry.track},${entry.carClass},${entry.lapTime},${entry.weather},${entry.result}`).join("\n");
       const blob = new Blob([headers + rows], { type: "text/csv" });
       const url = URL.createObjectURL(blob);
