--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSU9g8cfuSLVQToXqGY4VHMhIsTNT7WTEJ7Bw&s" alt="Join IFWL on SimGrid" class="mx-auto h-16">
       </a>
     </div>
-    <button onclick="downloadCSV()" class="mt-4 bg-green-600 text-white p-2 rounded hover:bg-green-700">Download Submissions CSV</button>
+    
   </div>
 
   <button onclick="downloadCSV()" class="mt-4 bg-green-600 text-white p-2 rounded hover:bg-green-700">
@@ -71,7 +71,6 @@
 
   <script>
   const submissionLog = [];
-    const submissionLog = [];
     document.getElementById("simgridPromo").classList.add("hidden");
 
     function timeToSeconds(timeStr) {
@@ -122,15 +121,7 @@
         const result = classify(track, carClass, lapTime);
         document.getElementById("result").classList.remove("text-red-600");
         document.getElementById("result").textContent = `You're classified as: ${result}`;
-      submissionLog.push({
-        name: document.getElementById("driverName").value,
-        track,
-        carClass,
-        lapTime,
-        weather,
-        result
-      });
-        document.getElementById("simgridPromo").classList.remove("hidden");
+      document.getElementById("simgridPromo").classList.remove("hidden");
 
         submissionLog.push({
           name: document.getElementById("driverName").value,
@@ -145,7 +136,7 @@
 
     function downloadCSV() {
   const password = prompt("Enter password to download submissions:");
-  if (password !== "adamlovesjackson") {
+  if (password !== "IFWL2025!") {
     alert("Incorrect password. Access denied.");
     return;
   }
