--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     function downloadCSV() {
   const password = prompt("Enter password to download submissions:");
-  if (password !== "IFWL2025!") {
+  if (password !== "69420") {
     alert("Incorrect password. Access denied.");
     return;
   }
