--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         "Pro - IFWL.NET Pro am may suit your race pace",
         "Alien - consider getting a real race car ! :) "
       ];
-      for (let i = 0; i < thresholds.length; i++) {
+      for (let i = thresholds.length - 1; i >= 0; i--) {
         if (userTime <= thresholds[i]) return classes[i];
       }
       return "Alien";
