--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
       }
-      return "Alien";
+      return "you require more time on track before entering the beginner series - ask our members for help and guidance";
     }
 
     document.getElementById("classificationForm").addEventListener("submit", function (e) {
