--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
       }
-      return "you require more time on track before entering the beginner series - ask our members for help and guidance";
+      return "Alien";
     }
 
     document.getElementById("classificationForm").addEventListener("submit", function (e) {
@@ -123,13 +123,24 @@
         document.getElementById("result").textContent = `You're classified as: ${result}`;
       document.getElementById("simgridPromo").classList.remove("hidden");
 
-        submissionLog.push({
+        const entry = {
           name: document.getElementById("driverName").value,
           track,
           carClass,
           lapTime,
           weather,
           result
+        };
+
+        submissionLog.push(entry);
+
+        // Send to Google Sheets
+        fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
+          method: "POST",
+          body: JSON.stringify(entry),
+          headers: {
+            "Content-Type": "application/json"
+          }
         });
       }
     });
