--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         submissionLog.push(entry);
 
         // Send to Google Sheets
-        fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec"), {
+        fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
           method: "POST",
           body: JSON.stringify(entry),
           headers: {
