--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
           headers: {
             "Content-Type": "application/json"
           }
+        })
+        .then(response => response.json())
+        .then(data => {
+          alert("✅ success!");
+        })
+        .catch(error => {
+          console.error("❌ Failed to save entry:", error);
+          alert("❌ Failed to save, Please try again later.");
         });
       }
     });
