--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
         // Send to Google Sheets
         fetch("https://script.google.com/macros/s/AKfycbyITdZAsY0oaeG48PK5r120i1d4Qp_4GUw4QgQygAFihv1NkIMcIpctOaxdjD9Ru0wr/exec", {
           method: "POST",
+          mode: "no-cors",
           body: JSON.stringify(entry),
           headers: {
             "Content-Type": "application/json"
           }
         })
-        .then(response => response.json())
-        .then(data => {
-          alert("✅ success!");
+        .then(() => {
+          alert("✅ Entry submitted to Google Sheets.");
         })
         .catch(error => {
           console.error("❌ Failed to save entry:", error);
-          alert("❌ Failed to save, Please try again later.");
+          alert("❌ Failed to save to Google Sheets. Please try again later.");
         });
       }
     });
