--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
           }
         })
         .then(() => {
-          alert("✅ Entry submitted to Google Sheets.");
+          alert("✅ Entry submitted.");
         })
         .catch(error => {
           console.error("❌ Failed to save entry:", error);
-          alert("❌ Failed to save to Google Sheets. Please try again later.");
+          alert("❌ Failed to save, Please try again later.");
         });
       }
     });
