--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
         "Rookie - IFWL.NET Beginner series is ideal for you ",
-        "AM - IFWL.NET Pro - am series is ideal for you",
+        "AM - its best to continue improving in IFWL.NET beginner series - unless asked by Ops team to move up a class.",
         " high end - AM - IFWL.NET Pro - am series is ideal for you",
         "Pro - IFWL.NET Pro am may suit your race pace",
         "Alien - consider getting a real race car ! :) "
