--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
         "Rookie - IFWL.NET Beginner series is ideal for you ",
-        "AM - its best to continue improving in IFWL.NET beginner series - unless asked by Ops team to move up a class.",
+        "AM - IFWL.NET Pro - am series is ideal for you",
         " high end - AM - IFWL.NET Pro - am series is ideal for you",
         "Pro - IFWL.NET Pro am may suit your race pace",
         "Alien - consider getting a real race car ! :) "
@@ -120,7 +120,34 @@
       } else {
         const result = classify(track, carClass, lapTime);
         document.getElementById("result").classList.remove("text-red-600");
-        document.getElementById("result").textContent = `You're classified as: ${result}`;
+        const resultIndex = [
+  "Rookie",
+  "AM",
+  "high end - AM",
+  "Pro",
+  "Alien"
+].indexOf(result.split(" - ")[0]);
+const proThreshold = thresholds[classes.length - 2];
+const highAmThreshold = thresholds[classes.length - 3];
+const amThreshold = thresholds[classes.length - 4];
+
+let comparisonText = "";
+if (resultIndex < 4) {
+  const deltaToPro = (userTime - proThreshold).toFixed(3);
+  comparisonText += `
+🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+}
+if (resultIndex < 3) {
+  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+  comparisonText += `
+🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+}
+if (resultIndex < 2) {
+  const deltaToAm = (userTime - amThreshold).toFixed(3);
+  comparisonText += `
+🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+}
+document.getElementById("result").textContent = `You're classified as: ${result}${comparisonText}`;
       document.getElementById("simgridPromo").classList.remove("hidden");
 
         const entry = {
@@ -144,11 +171,11 @@
           }
         })
         .then(() => {
-          alert("✅ Entry submitted.");
+          alert("✅ Entry submitted to Google Sheets.");
         })
         .catch(error => {
           console.error("❌ Failed to save entry:", error);
-          alert("❌ Failed to save, Please try again later.");
+          alert("❌ Failed to save to Google Sheets. Please try again later.");
         });
       }
     });
