--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
   "Pro",
   "Alien"
 ].indexOf(result.split(" - ")[0]);
-const proThreshold = thresholds[classes.length - 2];
-const highAmThreshold = thresholds[classes.length - 3];
-const amThreshold = thresholds[classes.length - 4];
+const classCount = 5; // number of total ranks in classes
+const proThreshold = thresholds[classCount - 2];
+const highAmThreshold = thresholds[classCount - 3];
+const amThreshold = thresholds[classCount - 4];
 
 let comparisonText = "";
 if (resultIndex < 4) {
@@ -147,7 +148,7 @@ if (resultIndex < 2) {
   comparisonText += `
 🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
 }
-document.getElementById("result").textContent = `You're classified as: ${result}${comparisonText}`;
+document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
       document.getElementById("simgridPromo").classList.remove("hidden");
 
         const entry = {
