--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@ const amThreshold = thresholds[classCount - 4];
 
 let comparisonText = "";
 if (resultIndex < 4) {
-  const deltaToPro = (userTime - proThreshold).toFixed(3);
+  const deltaToPro = (proThreshold - userTime).toFixed(3);
   comparisonText += `
 🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
 }
 if (resultIndex < 3) {
-  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+  const deltaToHighAm = (highAmThreshold - userTime).toFixed(3);
   comparisonText += `
 🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
 }
 if (resultIndex < 2) {
-  const deltaToAm = (userTime - amThreshold).toFixed(3);
+  const deltaToAm = (amThreshold - userTime).toFixed(3);
   comparisonText += `
 🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
 }
