--- a/index.html
+++ b/index.html
@@ -136,14 +136,26 @@ let comparisonText = "";
 if (resultIndex !== 3) {
   const deltaToPro = (userTime - proThreshold).toFixed(3);
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+} else {
+  const deltaToPro = (userTime - proThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+}
 }
 if (resultIndex !== 2) {
   const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+} else {
+  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
+}
 }
 if (resultIndex !== 1) {
   const deltaToAm = (userTime - amThreshold).toFixed(3);
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+} else {
+  const deltaToAm = (userTime - amThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
+}
 }
 document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
       document.getElementById("simgridPromo").classList.remove("hidden");
