--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ if (resultIndex !== 1) {
   const deltaToAm = (userTime - amThreshold).toFixed(3);
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
 }
+} else {
+  const deltaToAm = (userTime - amThreshold).toFixed(3);
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
+}
 document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
       document.getElementById("simgridPromo").classList.remove("hidden");
 
