--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         let comparisonText = "";
         if (resultIndex !== 3) {
           const deltaToPro = (userTime - proThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${userTime > proThreshold ? 'slower than' : 'faster than'} the Pro threshold.`;
         } else {
           const deltaToPro = (userTime - proThreshold).toFixed(3);
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
@@ -141,7 +141,7 @@
 
         if (resultIndex !== 2) {
           const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${userTime > highAmThreshold ? 'slower than' : 'faster than'} the High-end AM threshold.`;
         } else {
           const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
@@ -149,7 +149,7 @@
 
         if (resultIndex !== 1) {
           const deltaToAm = (userTime - amThreshold).toFixed(3);
-          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${userTime > amThreshold ? 'slower than' : 'faster than'} the AM threshold.`;
         } else {
           const deltaToAm = (userTime - amThreshold).toFixed(3);
           comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
