--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
 } else {
   const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current threshold for your pace.`;
+  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)
 }
 } seconds inside the current threshold for your pace.`;
         }
