--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       if (userTime < bufferTime) {
         document.getElementById("result").textContent = "⚠️ This time is deemed unrealistic. Please check your entry.";
         document.getElementById("result").classList.add("text-red-600");
-      } else if (userTime < fastestAllowedTime) {
+        return;
+      } else {
         const result = classify(track, carClass, lapTime);
         document.getElementById("result").classList.remove("text-red-600");
 
@@ -131,44 +132,33 @@
         const amThreshold = thresholds[classCount - 4];
 
         let comparisonText = "";
-        if (resultIndex !== 3) {
-  const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
-} else {
-  const deltaToPro = (userTime - proThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current Pro threshold for your pace.`;
-}
+
+        // Pro
+        const deltaToPro = (userTime - proThreshold).toFixed(3);
+        if (resultIndex === 3) {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds inside the current Pro threshold for your pace.`;
+        } else {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToPro)} seconds ${deltaToPro > 0 ? 'slower than' : 'faster than'} the Pro threshold.`;
         }
 
-        if (resultIndex !== 2) {
-  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
-} else {
-  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current High-end AM threshold for your pace.`;
-}
-}
-if (resultIndex !== 2) {
-  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
-} else {
-  const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current threshold for your pace.`;
-}
-}
-if (resultIndex !== 1) {
-  const deltaToAm = (userTime - amThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
-} else {
-  const deltaToAm = (userTime - amThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current AM threshold for your pace.`;
-}
-} else {
-  const deltaToAm = (userTime - amThreshold).toFixed(3);
-  comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current threshold for your pace.`;
-}
-document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
-      document.getElementById("simgridPromo").classList.remove("hidden");
+        // High-end AM
+        const deltaToHighAm = (userTime - highAmThreshold).toFixed(3);
+        if (resultIndex === 2) {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds inside the current High-end AM threshold for your pace.`;
+        } else {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToHighAm)} seconds ${deltaToHighAm > 0 ? 'slower than' : 'faster than'} the High-end AM threshold.`;
+        }
+
+        // AM
+        const deltaToAm = (userTime - amThreshold).toFixed(3);
+        if (resultIndex === 1) {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds inside the current AM threshold for your pace.`;
+        } else {
+          comparisonText += `<br>🕒 You are ${Math.abs(deltaToAm)} seconds ${deltaToAm > 0 ? 'slower than' : 'faster than'} the AM threshold.`;
+        }
+
+        document.getElementById("result").innerHTML = `<strong>You're classified as:</strong> ${result}${comparisonText}<br><br><span class='text-sm text-blue-700 italic'>🧠 Want to level up? Focus on one sector per session. Small gains = big wins!</span>`;
+        document.getElementById("simgridPromo").classList.remove("hidden");
 
         const entry = {
           name: document.getElementById("driverName").value,
