--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
-        "Rookie - IFWL.NET Beginner series is ideal for you ",
-        "AM - IFWL.NET Pro - am series is ideal for you",
-        " high end - AM - IFWL.NET Pro - am series is ideal for you",
-        "Pro - IFWL.NET Pro am may suit your race pace",
-        "Alien - consider getting a real race car ! :) "
-      ];
+  "Alien - consider getting a real race car ! :) ",
+  "Pro - IFWL.NET Pro am may suit your race pace",
+  "high end - AM - IFWL.NET Pro - am series is ideal for you",
+  "AM - IFWL.NET Pro - am series is ideal for you",
+  "Rookie - IFWL.NET Beginner series is ideal for you "
+];
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
       }
