--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   "Pro - IFWL.NET Pro am may suit your race pace",
   "high end - AM - IFWL.NET Pro - am series is ideal for you",
   "AM - IFWL.NET Pro - am series is ideal for you",
-  "Rookie - IFWL.NET Beginner series is ideal for you "
+  "beginner - IFWL.NET Beginner series is ideal for you "
 ];
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
@@ -119,7 +119,7 @@
         document.getElementById("result").classList.remove("text-red-600");
 
         const resultIndex = [
-          "Rookie",
+          "beginner",
           "AM",
           "high end - AM",
           "Pro",
