--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
       const thresholds = classificationData[track][carClass].map(timeToSeconds);
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
-  "Alien - consider getting a real race car ! :) ",
-  "Pro - IFWL.NET Pro am may suit your race pace",
-  "high end - AM - IFWL.NET Pro - am series is ideal for you",
+  "beginner - IFWL.NET Beginner series is ideal for you",
   "AM - IFWL.NET Pro - am series is ideal for you",
-  "beginner - IFWL.NET Beginner series is ideal for you "
+  "high end - AM - IFWL.NET Pro - am series is ideal for you",
+  "Pro - IFWL.NET Pro am may suit your race pace",
+  "Alien - consider getting a real race car ! :) "
 ];
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
@@ -119,7 +119,7 @@
         document.getElementById("result").classList.remove("text-red-600");
 
         const resultIndex = [
-          "beginner",
+          "Rookie",
           "AM",
           "high end - AM",
           "Pro",
