--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         document.getElementById("result").classList.remove("text-red-600");
 
         const resultIndex = [
-          "Rookie",
+          "beginner",
           "AM",
           "high end - AM",
           "Pro",
