--- a/index.html
+++ b/index.html
@@ -82,9 +82,17 @@
       const weather = document.getElementById("weather").value;
       const rainImpact = weather === "wet" ? 1.05 : 1;
       if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
-      const thresholds = classificationData[track][carClass].map(timeToSeconds);
+      const rawThresholds = classificationData[track][carClass].map(timeToSeconds);
+      const fastest = rawThresholds[rawThresholds.length - 1];
+      const proLine = fastest * 1.02;
+      const highAmLine = proLine + 0.02;
+      const amLine = highAmLine + 0.02;
+      const beginnerLine = amLine + 0.02;
+      const requireImprovement = beginnerLine + 0.02;
+      const thresholds = [requireImprovement, beginnerLine, amLine, highAmLine, proLine, fastest];
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
+  "require improvement - this time is too slow to classify",
   "beginner - IFWL.NET Beginner series is ideal for you",
   "AM - IFWL.NET Pro - am series is ideal for you",
   "high end - AM - IFWL.NET Pro - am series is ideal for you",
@@ -92,7 +100,7 @@
   "Alien - consider getting a real race car ! :) "
 ];
       for (let i = 0; i < thresholds.length; i++) {
-        if (userTime <= thresholds[i]) return classes[classes.length - 1 - i];
+        if (userTime <= thresholds[i]) return classes[i];
       }
       return "Alien";
     }
@@ -119,7 +127,7 @@
         document.getElementById("result").classList.remove("text-red-600");
 
         const resultIndex = [
-          "beginner",
+          "Rookie",
           "AM",
           "high end - AM",
           "Pro",
