--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
       const rainImpact = weather === "wet" ? 1.05 : 1;
       if (!classificationData[track] || !classificationData[track][carClass]) return "No data for selected track/class";
       const rawThresholds = classificationData[track][carClass].map(timeToSeconds);
-      const fastest = rawThresholds[rawThresholds.length - 1];
-      const proLine = fastest * 1.02;
-      const highAmLine = proLine + 0.02;
-      const amLine = highAmLine + 0.02;
-      const beginnerLine = amLine + 0.02;
-      const requireImprovement = beginnerLine + 0.02;
-      const thresholds = [requireImprovement, beginnerLine, amLine, highAmLine, proLine, fastest];
+      const alien = rawThresholds[rawThresholds.length - 1];
+      const pro = alien * 1.02 + 0.01;
+      const highAm = pro + 0.01;
+      const am = highAm + 0.01;
+      const beginner = am + 0.01;
+      const requireImprovement = beginner + 0.01;
+      const unrealistic = alien * 0.95;
+      const thresholds = [unrealistic, requireImprovement, beginner, am, highAm, pro, alien];
       const userTime = timeToSeconds(lapTime) / rainImpact;
       const classes = [
+  "unrealistic - please check your time entry",
   "require improvement - this time is too slow to classify",
   "beginner - IFWL.NET Beginner series is ideal for you",
   "AM - IFWL.NET Pro - am series is ideal for you",
@@ -127,7 +129,8 @@
         document.getElementById("result").classList.remove("text-red-600");
 
         const resultIndex = [
-          "Rookie",
+          "require improvement",
+          "beginner",
           "AM",
           "high end - AM",
           "Pro",
