--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       for (let i = 0; i < thresholds.length; i++) {
         if (userTime <= thresholds[i]) return classes[i];
       }
-      return "Alien";
+      return "this is a ben error. 404:81";
     }
 
     document.getElementById("classificationForm").addEventListener("submit", function (e) {
